<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="20dip"
        android:text="@string/txt_ambient_name" />

    <EditText
        android:id="@+id/nameAmbient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeTextView"
        android:layout_marginBottom="20dip"
        android:ems="10"
        android:inputType="textCapWords">
    </EditText>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameAmbient" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameAmbient"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="5dip"
                android:text="@string/txt_light" />

            <Button
                android:id="@+id/lightButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_marginBottom="20dip"
                android:text="0" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lightButton"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="5dip"
                android:text="@string/txt_temperature" />

            <Button
                android:id="@+id/temperatureButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_marginBottom="20dip"
                android:text="0" />

            <ListView
                android:id="@+id/room_ambient"
                android:layout_width="match_parent"
                android:layout_height="126dp"
                android:layout_marginBottom="10dip" >

            </ListView>

            <Button
                android:id="@+id/saveConfigButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dip"
                android:text="@string/button_save_config" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>