<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="10dip"
        android:gravity="center_horizontal"
        android:text="@string/hello" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeTextView"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="5dip"
        android:text="@string/txt_light" />

    <Button
        android:id="@+id/lightButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginBottom="20dip"
        android:text="0" />
    <!--
        android.widget.NumberPicker
        android:id="@+id/lightPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip" /
    -->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lightButton"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="5dip"
        android:text="@string/txt_temperature" />

    <Button
        android:id="@+id/temperatureButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginBottom="20dip"
        android:text="0" />
    <!--
        android.widget.NumberPicker
        android:id="@+id/temperaturePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" /
    -->

    <Button
        android:id="@+id/saveConfigButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dip"
        android:text="@string/button_save_config" />

    <!-- RelativeLayout
        android:id="@+id/setConfigsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_centerHorizontal="true"
            android:text="@string/txt_temperature" /-->

        <!-- android.widget.NumberPicker
            android:id="@+id/configPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/textView3" /-->

        <!-- Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/configPicker"
            android:layout_marginBottom="5dip"
            android:text="@string/button_save" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/configPicker"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@+id/saveButton"
            android:text="@string/button_cancel" />
    </RelativeLayout-->

</RelativeLayout>